--- a/package.json
+++ b/package.json
@@ -9,11 +9,15 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@googlemaps/markerclusterer": "^2.5.1",
     "expo": "~49.0.15",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
-    "react-native-maps": "1.7.1"
+    "react-native-clusterer": "^1.3.0",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "1.7.1",
+    "react-native-maps-clustering": "^1.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
