--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.1",
     "expo": "~49.0.15",
+    "expo-location": "^16.3.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
