--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-clusterer": "^1.3.0",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.7.1",
     "react-native-maps-clustering": "^1.2.4"
