--- a/package.json
+++ b/package.json
@@ -10,16 +10,19 @@
   },
   "dependencies": {
     "@googlemaps/markerclusterer": "^2.5.1",
+    "axios": "^1.6.2",
     "expo": "~49.0.15",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-clusterer": "^1.3.0",
+    "react-native-geocoding": "^0.5.0",
     "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-map-clustering": "^3.4.2",
     "react-native-maps": "1.7.1",
-    "react-native-maps-clustering": "^1.2.4"
+    "react-native-maps-clustering": "^1.2.4",
+    "react-native-maps-directions": "^1.9.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
